# AlphaNeutronSim

./: .gitignore  AlphaN.cpp  CMakeLists.txt  LICENSE  ReadMe.md  VRML.mac  input.mac  rayTracer.mac  vis.mac
include/: ActionInitialization.h  BOptrChangeCrossSection.h  BOptrMultiParticleChangeCrossSection.h  EventAction.h  GeometryConstruction.h  PrimaryGeneratorAction.h  RunAction.h  SteppingAction.h
src/: ActionInitialization.cpp  BOptrChangeCrossSection.cpp  BOptrMultiParticleChangeCrossSection.cpp  EventAction.cpp  GeometryConstruction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp
